--- a/src/main/resources/static/pageFront/my.html
+++ b/src/main/resources/static/pageFront/my.html
@@ -64,7 +64,7 @@
         </section>
 
         <div id="shoppingCart">
-            <img src="images/shoppingCart.png" alt="">
+            <a href="cartList.html" target="_Blank"><img src="../images/shoppingCart.png" alt=" "></a>
         </div>
         <hr class="line">
         <!--////////////////////////////////////Footer-->
