--- a/src/main/resources/static/pageFront/menu.html
+++ b/src/main/resources/static/pageFront/menu.html
@@ -16,212 +16,95 @@
 </head>
 
 <body>
-    <div class="wrap-body">
-        <header class="zerogrid">
-            <div class="logo">
-                <hr class="line-1">
-                <a href="#">StarryFood</a>
-                <span>食 - 人生之大事</span>
-                <hr class="line-1">
-            </div>
-            <div id='cssmenu' class="align-center">
-                <ul>
-                    <li><a href='index.html'><span>Home</span></a></li>
-                    <li class="active"><a href='menu.html'><span>Menu</span></a></li>
-                    <li class='last'><a href='my.html'><span>My</span></a></li>
-                </ul>
-            </div>
-        </header>
-        <!--////////////////////////////////////Container-->
-        <section id="container">
-            <div class="wrap-container clearfix">
-                <div id="main-content">
-                    <div class="wrap-content zerogrid ">
-                        <article class="background-gray">
-                            <div class="art-header">
-                                <hr class="line-2">
-                                <h2>Our menu</h2>
-                            </div>
-                            <div class="art-content">
-                                <div class="row">
-                                    <div class="col-1-3">
-                                        <div class="wrap-col">
-                                            <div class="item-container">
-                                                <a class="example-image-link" href="../images/menu-1.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward.">
-                                                    <div class="item-caption">
-                                                        <div class="item-caption-inner">
-                                                            <div class="item-caption-inner1">
-                                                                <h3>$45</h3>
-                                                                <span>Only</span>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <img class="example-image" src="../images/menu-1.jpg" alt="" />
-                                                </a>
-                                            </div>
-                                            <div class="item-container">
-                                                <a class="example-image-link" href="../images/menu-4.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward.">
-                                                    <div class="item-caption">
-                                                        <div class="item-caption-inner">
-                                                            <div class="item-caption-inner1">
-                                                                <h3>$45</h3>
-                                                                <span>Only</span>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <img class="example-image" src="../images/menu-4.jpg" alt="" />
-                                                </a>
-                                            </div>
-                                            <div class="item-container">
-                                                <a class="example-image-link" href="../images/menu-7.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward.">
-                                                    <div class="item-caption">
-                                                        <div class="item-caption-inner">
-                                                            <div class="item-caption-inner1">
-                                                                <h3>$45</h3>
-                                                                <span>Only</span>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <img class="example-image" src="../images/menu-7.jpg" alt="" />
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-1-3">
-                                        <div class="wrap-col">
-                                            <div class="item-container">
-                                                <a class="example-image-link" href="../images/menu-2.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward.">
-                                                    <div class="item-caption">
-                                                        <div class="item-caption-inner">
-                                                            <div class="item-caption-inner1">
-                                                                <h3>$45</h3>
-                                                                <span>Only</span>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <img class="example-image" src="../images/menu-2.jpg" alt="" />
-                                                </a>
-                                            </div>
-                                            <div class="item-container">
-                                                <a class="example-image-link" href="../images/menu-5.jpg">
-                                                    <div class="item-caption">
-                                                        <div class="item-caption-inner">
-                                                            <div class="item-caption-inner1">
-                                                                <h3>$45</h3>
-                                                                <span>Only</span>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <img class="example-image" src="../images/menu-5.jpg" alt="" />
-                                                </a>
-                                            </div>
-                                            <div class="item-container">
-                                                <a class="example-image-link" href="../images/menu-8.jpg">
-                                                    <div class="item-caption">
-                                                        <div class="item-caption-inner">
-                                                            <div class="item-caption-inner1">
-                                                                <h3>$45</h3>
-                                                                <span>Only</span>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <img class="example-image" src="../images/menu-8.jpg" alt="" />
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-1-3">
-                                        <div class="wrap-col">
-                                            <div class="item-container">
-                                                <a class="example-image-link" href="../images/menu-3.jpg">
-                                                    <div class="item-caption">
-                                                        <div class="item-caption-inner">
-                                                            <div class="item-caption-inner1">
-                                                                <h3>$45</h3>
-                                                                <span>Only</span>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <img class="example-image" src="../images/menu-3.jpg" alt="" />
-                                                </a>
-                                            </div>
-                                            <div class="item-container">
-                                                <a class="example-image-link" href="../images/menu-6.jpg">
-                                                    <div class="item-caption">
-                                                        <div class="item-caption-inner">
-                                                            <div class="item-caption-inner1">
-                                                                <h3>$45</h3>
-                                                                <span>Only</span>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <img class="example-image" src="../images/menu-6.jpg" alt="" />
-                                                </a>
-                                            </div>
-                                            <div class="item-container">
-                                                <a class="example-image-link" href="#">
-                                                    <div class="item-caption">
-                                                        <div class="item-caption-inner">
-                                                            <div class="item-caption-inner1">
-                                                                <h3>$45</h3>
-                                                                <span>Only</span>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <img class="example-image" src="../images/menu-9.jpg" alt="" />
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="background-white">
-                            <div class="art-header">
-                                <hr class="line-2">
-                                <h2>Pasta passion</h2>
-                            </div>
-                            <div class="art-content">
-                                <strong>At our Italian restaurant a massive amount of emphasis is placed on knowledge. All our front of house staff are tested regularly on all aspects of the menu so that they can knowledgeably and genuinely enthuse about the dishes they serve. We do this by holding regular food passion sessions which focus on individual dishes on the menu split.</strong>
-                                <div class="row">
-                                    <div class="col-1-2">
-                                        <div class="wrap-col post">
-                                            <img src="../images/menu-10.jpg" alt="" />
-                                            <h3>Small Groups</h3>
-                                            <p>His primis omittam intellegat cu, voluptua appetere mea ad, eu harum oporteat vix. Et vel quod legimus, graeci electram ocurreret at his. Vix at tation facete impetus omnesque ius harum antiopam.</p>
-                                            <a class="button" href="#">See All</a>
-                                        </div>
-                                    </div>
-                                    <div class="col-1-2">
-                                        <div class="wrap-col post">
-                                            <img src="../images/menu-11.jpg" alt="" />
-                                            <h3>Communication</h3>
-                                            <p>His primis omittam intellegat cu, voluptua appetere mea ad, eu harum oporteat vix. Vel quod legimus, graeci electram ocurreret at his. Vix at tation facete impetus omnesque ius harum antiopam.</p>
-                                            <a class="button" href="#">See All</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <div id="shoppingCart">
-            <img src="../images/shoppingCart.png" alt="">
+<div class="wrap-body">
+    <header class="zerogrid">
+        <div class="logo">
+            <hr class="line-1">
+            <a href="#">StarryFood</a>
+            <span>食 - 人生之大事</span>
+            <hr class="line-1">
         </div>
-        <hr class="line">
-        <!--////////////////////////////////////Footer-->
-        <footer>
-            <div class="wrap-footer">
-                <div class="zerogrid">
-                    <div class="wrap-col">
-                        <p>Copyright - StarryHu</p>
-                    </div>
+        <div id='cssmenu' class="align-center">
+            <ul>
+                <li><a href='index.html'><span>Home</span></a></li>
+                <li class="active"><a href='menu.html'><span>Menu</span></a></li>
+                <li class='last'><a href='my.html'><span>My</span></a></li>
+            </ul>
+        </div>
+    </header>
+    <!--////////////////////////////////////Container-->
+    <section id="container">
+        <div class="wrap-container clearfix">
+            <div id="main-content">
+                <div class="wrap-content zerogrid ">
+                    <article class="background-gray">
+                        <div class="art-header">
+                            <hr class="line-2">
+                            <h2>Our menu</h2>
+                        </div>
+                        <div class="art-content">
+                            <div class="row" id="row">
+                            </div>
+                        </div>
+                    </article>
                 </div>
             </div>
-        </footer>
+        </div>
+    </section>
+    <div id="shoppingCart">
+        <a href="cartList.html" target="_Blank"><img src="../images/shoppingCart.png" alt=" "></a>
     </div>
+    <hr class="line">
+    <!--////////////////////////////////////Footer-->
+    <footer>
+        <div class="wrap-footer">
+            <div class="zerogrid">
+                <div class="wrap-col">
+                    <p>Copyright - StarryHu</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+</div>
+
+<script src="../js/jquery-3.3.1.js"></script>
+<script>
+    const path = location.protocol + "//" + window.location.host + "/starryfood/food/getAllFoods";
+    // 获取全部菜品
+    $.ajax({
+        type: "get",
+        url: path,
+        dataType: "json",
+        success: function(response) {
+            // 容器下的row盒子
+            const row = $('#row');
+            for (let i = 0; i < response.data.list.length; i++) {
+                // 获取菜品对象
+                const element = response.data.list[i];
+                var itemContainer = `<div class="col-1-3">
+                        <div class="wrap-col">
+                            <div class="item-container">
+                                <a class="example-image-link" href="foodDetail.html?fid=${element.fid}">
+                                    <div class="item-caption">
+                                        <div class="item-caption-inner">
+                                            <div class="item-caption-inner1">
+                                                <h3>${element.price} 元 ${element.measurement}</h3>
+                                                <span>${element.fname}</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <img class="example-image" src="${element.img}" alt="" />
+                                </a>
+                            </div>
+                        </div>
+                    </div>`
+                // 装入到行盒子中
+                row.append(itemContainer);
+            }
+            console.log(response)
+        }
+    });
+</script>
 </body>
 
 </html>
