--- a/src/main/resources/static/manage/login.html
+++ b/src/main/resources/static/manage/login.html
@@ -6,12 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
     <link rel="stylesheet" href="lib/layui/css/layui.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/login.css">
-
-
 </head>
 
 <body class="login-bg">
@@ -25,6 +22,11 @@
         <hr class="hr15">
         <input name="psw" id="psw" lay-verify="required" placeholder="密码" type="password" class="layui-input">
         <hr class="hr15">
+        <input name="verifyCode" id="verifyCode" lay-verify="required" placeholder="验证码" type="text" class="layui-input">
+        <a href="javascript:changeVerify()"><img id="verifyImg" src="#"></a>
+        <hr class="hr15">
+        <p style="color:#B22222;">注意：验证码区分大小写！</p>
+        <hr class="hr15">
         <input value="登录" lay-submit lay-filter="login" style="width:100%;" type="submit" id="submit">
         <hr class="hr20">
     </form>
@@ -35,6 +37,8 @@
 <script src="lib/layui/layui.js" charset="utf-8"></script>
 <script>
     $(function() {
+        getVerifyCode();
+
         layui.use(['form','layer'], function() {
             var form = layui.form;
             var layer = layui.layer;
@@ -47,7 +51,8 @@
                     url: path,
                     data: {
                         adminId: $('#adminId').val(),
-                        password: $('#psw').val()
+                        password: $('#psw').val(),
+                        verifyCode: $('#verifyCode').val(),
                     },
                     dataType: "json",
                     success: function (response) {
@@ -66,6 +71,18 @@
             });
         });
     })
+
+    function changeVerify() {
+        var path = location.protocol + "//" + window.location.host + "/starryfood/verifyCode/get";
+        var newpath = path + "?a=" + new Date().getTime();
+        $("#verifyImg").attr('src',newpath);
+    };
+
+    function getVerifyCode() {
+        var path = location.protocol + "//" + window.location.host + "/starryfood/verifyCode/get";
+        console.log(path);
+        $("#verifyImg").attr('src',path);
+    }
 </script>
 </body>
 
