--- a/src/main/resources/static/front/index.html
+++ b/src/main/resources/static/front/index.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>StarryFood</title>
-    <meta name="description" content="Free Responsive Html5 Css3 Templates ">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/zerogrid.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/menu.css">
-    <link rel="stylesheet" href="css/new.css">
+    <link rel="stylesheet" href="css/main.css">
 
 </head>
 
@@ -54,8 +53,8 @@
                                     <div class="header">
                                         <h2>Delicious<span class="color-red">meat</span></h2>
                                     </div>
-                                    <strong>减肥必备,低脂高蛋白的鸡胸肉也可以很美味</strong><br /><br>
-                                    <span>鸡胸脯肉蛋白质含量较高，且易被人体吸收入利用，有增强体力，强壮身体的作用，所含对人体生长发育有重要作用的磷脂类，是中国人膳食结构中脂肪和磷脂的重要来源之一。因为鸡胸脯肉是高蛋白，低脂肪的食材，所以对正在减肥没你来说一定是一个不错的选择。</span><br /><br>
+                                    <strong>减肥必备,低脂高蛋白的鸡胸肉也可以很美味</strong><br/><br>
+                                    <span>鸡胸脯肉蛋白质含量较高，且易被人体吸收入利用，有增强体力，强壮身体的作用，所含对人体生长发育有重要作用的磷脂类，是中国人膳食结构中脂肪和磷脂的重要来源之一。因为鸡胸脯肉是高蛋白，低脂肪的食材，所以对正在减肥没你来说一定是一个不错的选择。</span><br/><br>
                                     <a href="foodDetail.html?fid=1" class="button">More Details</a>
                                 </div>
                             </div>
@@ -81,8 +80,8 @@
                                     <div class="header">
                                         <h2>Salads:</h2>
                                     </div>
-                                    <strong>减脂必备：有机鸡肉咖喱沙拉</strong><br /><br>
-                                    <span>有机鸡肉咖喱沙拉，既有营养又口感丰富，有机鸡肉口感嫩滑，咖喱和苹果醋的香气相得益彰，鸡肉、法诺和坚果的搭配正好软硬适中。</span><br /><br>
+                                    <strong>减脂必备：有机鸡肉咖喱沙拉</strong><br/><br>
+                                    <span>有机鸡肉咖喱沙拉，既有营养又口感丰富，有机鸡肉口感嫩滑，咖喱和苹果醋的香气相得益彰，鸡肉、法诺和坚果的搭配正好软硬适中。</span><br/><br>
                                     <a href="foodDetail.html?fid=2" class="button">More Details</a>
                                 </div>
                             </div>
@@ -108,8 +107,8 @@
                                     <div class="header">
                                         <h2>Noodle menu:</h2>
                                     </div>
-                                    <strong>奶油蘑菇意面</strong><br /><br>
-                                    <span>奶油蘑菇意面主要是以蘑菇，意大利面为主要食材的菜品，千万不要以为是白酱就觉得淡而无味，相反，味道特别鲜美，入口是厚重的奶香，其中有蘑菇的鲜味，培根的香味，最后是调味和奶油香气收尾，配合的特别完美。</span><br /><br>
+                                    <strong>奶油蘑菇意面</strong><br/><br>
+                                    <span>奶油蘑菇意面主要是以蘑菇，意大利面为主要食材的菜品，千万不要以为是白酱就觉得淡而无味，相反，味道特别鲜美，入口是厚重的奶香，其中有蘑菇的鲜味，培根的香味，最后是调味和奶油香气收尾，配合的特别完美。</span><br/><br>
                                     <a href="foodDetail.html?fid=3" class="button">More Details</a>
                                 </div>
                             </div>
@@ -136,34 +135,66 @@
     </footer>
 </div>
 
-<script src="js/jquery-3.3.1.js"></script>
-<script type="text/javascript" src="js/layer_mobile/layer.js"></script>
+<script type="text/javascript" src="js/jquery-3.3.1.js"></script>
+<script type="text/javascript" src="lib/layui/layui.js"></script>
 <script>
-    // 根据logined值判断是否登录成功
-    var str = window.location.href;
-    var logined = str.substr(str.indexOf('=') + 1);
-    // 未登录则返回
-    if (logined == 0) {
-        //提示层msg
-        layer.open({
-            content: '请先登录！',
-            skin: 'msg',
-            time: 2 //2秒后自动关闭
-        });
-        window.href = "login.html";
-    }
+    layui.use(['layer'], function () {
+        // 请求的基本路径
+        const path = location.protocol + "//" + window.location.host + "/starryfood";
 
+        $(function () {
+            // 获取当前登录用户的购物车信息，存放于session中
+            $.ajax({
+                type: "get",
+                url: path + "/customer/getLoginedCustomer",
+                dataType: "json",
+                success: function (response) {
+                    if (response.code != '0') {
+                        layer.msg(`${response.msg}`, {
+                            time: 1500,
+                            end: function () {
+                                // 未登陆时跳转到登录页面
+                                if (response.code == '397') location.href = "login.html";
+                            }
+                        })
+                    } else {
+                        // 将用户名取出来显示
+                        $('#editPersonInfo span').text(response.data.customerName);
+                        $('#editPersonInfo').bind('click', function () {
+                            layer.open({
+                                title: '修改个人信息',
+                                type: 2,
+                                content: 'editPersonInfo.html',
+                                area: ['500px', '400px'],
+                                // offset: '20%',
+                                shade: 0.5,
+                                shadeClose: true,//点击遮罩关闭
+                            });
+                        });
+                    }
+                }
+            });
+        })
 
-    // 获取当前登录用户的购物车信息，存放于session中
-    var path = location.protocol + "//" + window.location.host + "/starryfood/customer/getCartLogined";
-    $.ajax({
-        type: "get",
-        url: path,
-        dataType: "json",
-        success: function (response) {
-            console.log(response);
-        }
-    });
+        // 退出登录
+        $('#logout').click(function () {
+            $.ajax({
+                type: "get",
+                url: path + "/customer/logout",
+                dataType: "json",
+                success: function (response) {
+                    if (response.code == '0') {
+                        layer.msg('欢迎下次光临 ~ ', {
+                            time: 1500,
+                            end: function () {
+                                location.href = "login.html";
+                            }
+                        })
+                    }
+                }
+            });
+        })
+    })
 </script>
 </body>
 
