--- a/src/main/resources/static/front/menu.html
+++ b/src/main/resources/static/front/menu.html
@@ -4,14 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>StarryFood</title>
-    <meta name="description" content="Free Responsive Html5 Css3 Templates ">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/zerogrid.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/lightbox.css">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/menu.css">
-    <link rel="stylesheet" href="css/new.css">
+    <link rel="stylesheet" href="css/main.css">
 
 </head>
 
@@ -84,16 +83,16 @@
                 var itemContainer = `<div class="col-1-3">
                         <div class="wrap-col">
                             <div class="item-container">
-                                <a class="example-image-link" href="foodDetail.html?fid=${element.fid}">
+                                <a class="example-image-link" href="foodDetail.html?foodId=${element.foodId}">
                                     <div class="item-caption">
                                         <div class="item-caption-inner">
                                             <div class="item-caption-inner1">
-                                                <h3>${element.price} 元 ${element.measurement}</h3>
-                                                <span>${element.fname}</span>
+                                                <h3>${element.foodPrice} 元 ${element.foodMeasurement}</h3>
+                                                <span>${element.foodName}</span>
                                             </div>
                                         </div>
                                     </div>
-                                    <img class="example-image" src="${element.img}" alt="" />
+                                    <img class="example-image" src="${element.foodImg}" alt="" />
                                 </a>
                             </div>
                         </div>
