--- a/src/main/resources/static/manage/foodList.html
+++ b/src/main/resources/static/manage/foodList.html
@@ -37,7 +37,7 @@
 </div>
 
 <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
-<script type="text/javascript" src="js/more.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 <script src="lib/layui/layui.js"></script>
 <script>
     layui.use(['layer'], function() {
@@ -65,6 +65,7 @@
             }
         });
     })
+
 </script>
 
 
